deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: samplecode3927-nginx-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: samplecode3927-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
