service-lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: samplecode3927-web-lb
  annotations:
    service.beta.kubernetes.io/external-traffic: OnlyLocal
spec:
  ports:
  - port: 80
  selector:
    app: samplecode3927-nginx
  type: LoadBalancer
