service-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: samplecode3927-web
spec:
  ports:
  - port: 80
  selector:
    app: nginx
  type: NodePort
