ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: samplecode3927-ingress
spec:
  backend:
    serviceName: samplecode3927-web-np
    servicePort: 80
